# benchmark-numeric-conversion

./: CMakeLists.txt  README.md
.github/workflows/: compiler.yml
CMake/: PackageConfig.cmake
CMake/Modules/: AddProject.cmake  ProjectSettings.cmake  TargetProperties.cmake
Foundation/: CMakeLists.txt
Foundation/CommandLine/: CMakeLists.txt  CommandLine.cpp  CommandLine.hpp  CommandLine.inl  Option.cpp  Option.hpp
Foundation/CommandLine/Options/: BoolOption.cpp  BoolOption.hpp  EnumOption.hpp  EnumOption.inl  ValueOption.hpp  ValueOption.inl
Foundation/Core/: CMakeLists.txt  Compiler.cpp  Compiler.hpp  Macro.hpp  String.hpp  TypeTraits.hpp
Foundation/Profiler/: CMakeLists.txt  Instrument.cpp  Instrument.hpp  Measurement.cpp  Measurement.hpp  Measurement.inl  Profiler.cpp  Profiler.hpp  Statistics.cpp  Statistics.hpp
Foundation/Profiler/Instruments/: WallClock.cpp  WallClock.hpp
Foundation/Test/: CMakeLists.txt  Test.hpp  TestCase.cpp  TestCase.hpp  TestCase.inl  TestCaseFactory.cpp  TestCaseFactory.hpp  TestCaseFactory.inl  TestContext.cpp  TestContext.hpp  TestContext.inl  TestException.cpp  TestException.hpp  TestFilter.cpp  TestFilter.hpp  TestFixture.cpp  TestFixture.hpp  TestRegister.cpp  TestRegister.hpp  TestRegister.inl  TestResult.cpp  TestResult.hpp
Foundation/Test/Datasets/: CartesianProductDataset.hpp  CartesianProductDataset.inl  Dataset.cpp  Dataset.hpp  ItemDataset.hpp  ItemDataset.inl  VectorDataset.hpp  VectorDataset.inl
NumConvPerf/: BenchmarkOptions.cpp  BenchmarkOptions.hpp  CMakeLists.txt  Main.cpp  Num2Fmt.hpp
NumConvPerf/Benchmarks/: Num2StrCharConv.cpp  Num2StrPrint.cpp  Num2StrStream.cpp  Num2StrString.cpp  Str2NumCharConv.cpp  Str2NumScan.cpp  Str2NumStream.cpp  Str2NumString.cpp
NumConvPerf/Datasets/: IterationDatasets.hpp  NumberDatasets.hpp  StringNumberDatasets.hpp
NumConvPerf/Fixtures/: Num2StrCharConvFixture.hpp  Num2StrPrintFixture.hpp  Num2StrStreamFixture.hpp  Num2StrStringFixture.hpp  Str2NumCharConvFixture.hpp  Str2NumScanFixture.hpp  Str2NumStreamFixture.hpp  Str2NumStringFixture.hpp
