cmake_minimum_required(VERSION 3.15)

project(Foundation)

###############################################################################
#   PROJECTS
###############################################################################

add_subdirectory(Core)
add_subdirectory(CommandLine)
add_subdirectory(Profiler)
add_subdirectory(Test)
